# georot

./: .env  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: app.yaml
static/css/: style.css
templates/: index.html
tests/: test_transformation.py
